--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,42 +7,44 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "react-hook-form": "^7.48.0",
-    "@hookform/resolvers": "^3.3.0",
-    "zod": "^3.22.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.0",
+    "@hookform/resolvers": "^3.3.0",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
+    "autoprefixer": "^10.4.0",
+    "axios": "^1.6.0",
     "lucide-react": "^0.294.0",
+    "postcss": "^8.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.0",
+    "react-router-dom": "^6.20.0",
     "sockjs-client": "^1.6.0",
     "stompjs": "^2.3.3",
-    "@types/sockjs-client": "^1.5.0",
-    "@types/stompjs": "^2.3.4"
+    "tailwindcss": "^3.3.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jsdom": "^28.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "@types/react-router-dom": "^5.3.0"
+    "vitest": "^4.0.18"
   }
 }
-
-
-
-
