--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.0",
     "react-router-dom": "^6.20.0",
+    "rxjs": "^7.8.2",
     "sockjs-client": "^1.6.0",
     "stompjs": "^2.3.3",
     "tailwindcss": "^3.3.0",
