refactor: ajustes nos endpoints das regionais e direcionamento do rate limit de 10 requisiÃ§Ãµes

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -45,7 +45,7 @@ jwt:
 
 external:
   api:
-    police-regionals: https://integrador-argus-api.geia.vip/v1/regionais
+    police-regionais: https://integrador-argus-api.geia.vip/v1/regionais
 
 management:
   endpoints:
